[package]
name = "cabrillo"
version = "0.2.1"
authors = ["Alec Hussey <alec.hussey@madsoft.org>"]
license = "MIT"
description = "A nom parser for the Cabrillo file format used for submitting contest logs in amateur radio."
keywords = ["cabrillo", "parser"]
categories = ["parser-implementations"]
homepage = "https://github.com/alechussey/cabrillo"
documentation = "https://docs.rs/crate/cabrillo"
repository = "https://github.com/alechussey/cabrillo.git"
readme = "README.md"
edition = "2018"

[dependencies]
lazy_static = "1.4"
nom = { version = "5.1", features = ["regexp_macros"] }
chrono = "0.4"